--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -17,4 +17,7 @@
     <string name="signin_hint_user_name">User name or email address</string>
     <string name="signin_hint_password">Password</string>
     <string name="dialog_forgot_password">Forgot password?</string>
+    <string name="copy_word">Copy</string>
+    <string name="bookmark">Bookmark</string>
+    <string name="learn_on_duolingo">Learn on Duolingo</string>
 </resources>
