--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -20,4 +20,5 @@
     <string name="copy_word">Copy</string>
     <string name="bookmark">Bookmark</string>
     <string name="learn_on_duolingo">Learn on Duolingo</string>
+    <string name="hint_search_filter">Search</string>
 </resources>
