--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -21,4 +21,6 @@
     <string name="bookmark">Bookmark</string>
     <string name="learn_on_duolingo">Learn on Duolingo</string>
     <string name="hint_search_filter">Search</string>
+    <string name="login_remember_me">Remember me</string>
+    <string name="login_forgot_password">Forgot password?</string>
 </resources>
