--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,7 +9,7 @@
     <string name="invalid_username">Not a valid username</string>
     <string name="invalid_password">Password must be >5 characters</string>
     <string name="login_failed">"Login failed"</string>
-    <string name="dialog_sign_in">Sign in</string>
+    <string name="authorize">Authorize</string>
     <string name="dialog_user_name">TextView</string>
     <string name="dialog_password">Password</string>
     <string name="dialog_remember_me">Remember me</string>
