--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -44,4 +44,5 @@
     <string name="attachment_summary_off">Only download attachments when manually requested</string>
     <string name="dummy_setting_list_item_title">title</string>
     <string name="dummy_setting_list_item_summary">summary</string>
+    <string name="switch_lanaguge">Switch language</string>
 </resources>
