--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -45,4 +45,6 @@
     <string name="dummy_setting_list_item_title">title</string>
     <string name="dummy_setting_list_item_summary">summary</string>
     <string name="switch_lanaguge">Switch language</string>
+    <string name="dialog_or">or</string>
+    <string name="dialog_switch_language">Change course</string>
 </resources>
