--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -61,4 +61,5 @@
     <string name="detail_title_related_lexeme">Related lexeme</string>
     <string name="detail_title_proficiency_rate">Proficiency rate</string>
     <string name="detail_title_position">Position</string>
+    <string name="advertisement_unit_id">ca-app-pub-3940256099942544/6300978111</string>
 </resources>
